lib/GSL/Special/airy.h

int gsl_sf_airy_Ai_e(double x,int mode,double* result);
double gsl_sf_airy_Ai(double x,int mode);
int gsl_sf_airy_Bi_e(double x,int mode,double* result);
double gsl_sf_airy_Bi(double x,int mode);
int gsl_sf_airy_Ai_scaled_e(double x,int mode,double* result);
double gsl_sf_airy_Ai_scaled(double x,int mode);
int gsl_sf_airy_Bi_scaled_e(double x,int mode,double* result);
double gsl_sf_airy_Bi_scaled(double x,int mode);
int gsl_sf_airy_Ai_deriv_e(double x,int mode,double* result);
double gsl_sf_airy_Ai_deriv(double x,int mode);
int gsl_sf_airy_Bi_deriv_e(double x,int mode,double* result);
double gsl_sf_airy_Bi_deriv(double x,int mode);
int gsl_sf_airy_Ai_deriv_scaled_e(double x,int mode,double* result);
double gsl_sf_airy_Ai_deriv_scaled(double x,int mode);
int gsl_sf_airy_Bi_deriv_scaled_e(double x,int mode,double* result);
double gsl_sf_airy_Bi_deriv_scaled(double x,int mode);
int gsl_sf_airy_zero_Ai_e(int s,double* result);
double gsl_sf_airy_zero_Ai(int s);
int gsl_sf_airy_zero_Bi_e(int s,double* result);
double gsl_sf_airy_zero_Bi(int s);
int gsl_sf_airy_zero_Ai_deriv_e(int s,double* result);
double gsl_sf_airy_zero_Ai_deriv(int s);
int gsl_sf_airy_zero_Bi_deriv_e(int s,double* result);
double gsl_sf_airy_zero_Bi_deriv(int s);